# wellness_hub

./: .coverage  .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  generate_readme_pdf.py  important-commands.txt  main.py  out  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_tests.sh  safe_replace.sh  settings.json  setup.py  skills_list.csv  tech_skills.db  ~$mple_resume.docx
.data/: Controlled_Tech_Skills_Dictionary.csv  jobs.csv
.docs/: sample_resume.docx
.yoga/: Bhujangasana_Guide.txt  Tadasana_Guide.txt
daily_planner/: daily_planner_service.py  dynamic_rule_engine.py  planner.py
daily_planner/data/: advanced_rules.json  health_data.json
docs/: Wellness_Hub_Technical_Stack.md  setup_guide.md
docs/Rules/: AI_WellnessHub_Plan_Comparison_Detail.pptx
docs/ux/: iPhone_Emulator_Setup_For_Flutter_Team.md  iPhone_Emulator_Setup_Guide.md
matching/: embedding_matcher.py  skill_matcher.py
music/: music.py  music_player.py
parsers/: job_parser.py  resume_parser.py  resume_workflow.py
parsers/utils/: pdf_docx_file_utils.py
prompts/: career_advisor.py
recommender/: skill_gap.py
reports/: generate_report.py
stt_tts/: stt_google.py  stt_tts_service.py  tts_google.py
tests/: gcp_service_account_setup.md  test_main.py  test_music.py  test_workflow.py  tests_run.md
tests/daily_planner/: test_planner.py
tests/stt_tts/: test_google_voice.py  test_stt_tts_service_api.py
ux/: pubspec.yaml
ux/assets/: sample_plan.json
yoga/: flask_app.py  streamlit_app.py
yoga/templates/: video.html
(+4 files in other folders)
